--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -17,7 +17,7 @@ spec:
         repository: mathesar
         tag: latest
       instance_count: 1
-      instance_size_slug: basic-xxs
+      instance_size_slug: apps-s-1vcpu-1gb
       run_command: ""
       http_port: 8000
       envs:
