--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -6,9 +6,11 @@ spec:
   databases:
     - engine: PG
       name: mathesar-db
-      version: "17"
+      version: "16"
       cluster_name: mathesar-cluster
       production: true
+      db_name: mathesar_django
+      db_user: mathesar
 
   services:
     - name: mathesar-web
@@ -27,10 +29,10 @@ spec:
           value: ${APP_DOMAIN}
         - key: POSTGRES_DB
           scope: RUN_TIME
-          value: ${mathesar-db.DATABASE}
+          value: mathesar_django
         - key: POSTGRES_USER
           scope: RUN_TIME
-          value: ${mathesar-db.USERNAME}
+          value: mathesar
         - key: POSTGRES_PASSWORD
           scope: RUN_TIME
           value: ${mathesar-db.PASSWORD}
