--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -22,7 +22,7 @@ spec:
           value: ${mathesar-db.DATABASE}
         - key: POSTGRES_USER
           scope: RUN_TIME
-          value: mathesar
+          value: ${mathesar-db.USERNAME}
         - key: POSTGRES_PASSWORD
           scope: RUN_TIME
           value: ${mathesar-db.PASSWORD}
@@ -39,4 +39,3 @@ spec:
       engine: PG
       version: "16"
       cluster_name: mathesar-cluster
-      db_user: mathesar
